リセットCSS実装＋一覧配置実装

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,9 @@
-トップページ
+<div class="wrapper">
+  <div class="header">
+    <h1>TripPhoto</h1>
+    <h1>キーワード検索</h1>
+  </div>
+  <div class="main">
+    メイン
+  </div>
+</div>
