--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -5,6 +5,15 @@
 .header {
   display: flex;
   justify-content: space-around;
-
+  height: 80px;
 }
 
+h1 {
+  font-size: 40px;
+  padding-top: 10px;
+}
+
+.main {
+  height: calc(100vh - 80px);
+  overflow: scroll;
+}
