--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,6 +4,7 @@
     <h1>キーワード検索</h1>
   </div>
   <div class="main">
+    <%= link_to "新規投稿", new_post_path, method: :get %>
     メイン
   </div>
 </div>
