--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,15 @@
-    <%= form_with(model: post, local: true) do |f| %>
-      <%= f.text_field :city, placeholder: "都道府県" %>
-      <%= f.text_field :explain, placeholder: "情報" %>
-      <%= f.submit "SEND" %>
-    <% end %>
+<%= form_with(model: post, local: true) do |f| %>
+  <div class="field">
+    <%= f.label :city, "都道府県" %><br />
+    <%= f.text_field :city %>
+  </div>
+
+  <div class="field">
+    <%= f.label :explain, "説明" %><br />
+    <%= f.text_area :explain, class: :form__text %>
+  </div>
+
+  <div class="actions">
+    <%= f.submit "投稿する", class: :form__btn  %>
+  </div>
+<% end %>
