投稿画像の表示、画像の有無確認

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,6 +11,7 @@
       <% @posts.each do |post| %>
         <p><%= post.city %></p>
       <% end %>
+      <%= image_tag post.image, class: "post_image" if post.image.attached? %>
     </div>
     
   </div>
