--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,9 +10,11 @@
     <div class="post_info">
       <% @posts.each do |post| %>
         <p><%= post.city %></p>
+
+        <%= link_to image_tag(post.image, class: :post_image), "#" %>
+
       <% end %>
-      <%= image_tag post.image, class: "post_image" if post.image.attached? %>
     </div>
-    
   </div>
 </div>
+
