--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,7 +9,7 @@
     <h1>投稿内容</h1>
     <div class="post_info">
       <% @posts.each do |post| %>
-        <p><%= post.city %></p>
+        <p><%= post.city.name %></p>
 
         <%= link_to image_tag(post.image, class: :post_image), "#" %>
 
