--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,7 +2,7 @@
 
   <div class="field">
     <%= f.label :city, "都道府県" %><br />
-    <%= f.text_field :city %>
+    <%= f.collection_select(:city_id, City.all, :id, :name, {}, {class:"city-select"}) %>
   </div>
 
   <div class="field">
