--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,6 +12,8 @@
         <p><%= post.city.name %></p>
 
         <%= link_to image_tag(post.image, class: :post_image), "#" %>
+
+        <p><%= post.explain %></p>
         
         <%= link_to '削除', post_path(post.id), method: :delete %>
       <% end %>
