--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,7 +10,7 @@
     <div class="post_info">
       <% @posts.each do |post| %>
         <p><%= post.city.name %></p>
-
+        <p><%= post.created_at %></p>
         <%= link_to image_tag(post.image, class: :post_image), "#" %>
 
         <p><%= post.explain %></p>
