--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,7 +12,7 @@
       <% @posts.each do |post| %>
         <p><%= post.city.name %></p>
         <%= l post.created_at %>
-        <%= link_to image_tag(post.image, class: :post_image), "#" %>
+        <%= link_to image_tag(post.image.variant(resize: '500x500'), class: :post_image), "#" %>
 
         <p><%= post.explain %></p>
         
