--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,6 +2,10 @@
   <div class="header">
     <h1>TripPhoto</h1>
     <h1>キーワード検索</h1>
+    <%= form_with(url: search_posts_path, local: true, method: :get, class: "search_form") do |form| %>
+      <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
+      <%= form.submit "検索", class: "search-btn" %>
+    <% end %>
   </div>
 
   <div class="main">
