--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,10 +2,12 @@
   <div class="header">
     <h1>TripPhoto</h1>
     <h1>キーワード検索</h1>
+    <%# 検索機能に関する記述 %>
     <%= form_with(url: search_posts_path, local: true, method: :get, class: "search_form") do |form| %>
       <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
       <%= form.submit "検索", class: "search-btn" %>
     <% end %>
+    <%# /検索機能に関する記述/ %>
   </div>
 
   <div class="main">
