--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,8 +9,11 @@
     <% end %>
     <%# /検索機能に関する記述/ %>
   </div>
-
-  <%= render partial: "post", locals: { post: @posts } %>
-  
+  <div class="main">
+    <%= link_to current_user.name, edit_user_path(current_user) %>
+    <%= link_to "新規投稿", new_post_path, method: :get %>
+    <h1>投稿内容</h1>
+    <%= render partial: "post", locals: { post: @posts } %>
+  </div>
 </div>
 
