--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="header">
     <h1>TripPhoto</h1>
-    <h1>キーワード検索</h1>
+    
     <%# 検索機能に関する記述 %>
     <%# <%= form_with(url: search_posts_path, local: true, method: :get, class: "search_form") do |form| %>
       <%# <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
@@ -11,8 +11,12 @@
   </div>
 
   <div class="main">
-    <%= link_to current_user.name, edit_user_path(current_user) %>
-    <%= link_to "新規投稿", new_post_path, method: :get %>
+    <div class="current_user_name">
+      <%= link_to current_user.name, edit_user_path(current_user) %>
+    </div>
+    <div class="new_post_btn">
+      <%= link_to "新規投稿", new_post_path, method: :get %>
+    </div>
     <h1>投稿内容</h1>
     <%= render partial: "post", locals: { post: @posts } %>
   </div>
