--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,4 @@
-新規投稿ページ
-<%= render partial: "form", locals: { post: @post } %>
+<p>新規投稿ページ</p>
+<div class="post_form">
+  <%= render partial: "form", locals: { post: @post } %>
+</div>
