--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<p>新規投稿ページ</p>
+<h1 class="form_title">新規投稿ページ</h1>
 <div class="post_form">
   <%= render partial: "form", locals: { post: @post } %>
 </div>
