タグの調整

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,14 +1,16 @@
 <div class="post_info">
   <% @posts.each do |post| %>
     <div class="post_city_name">
-      <p><%= post.city.name %></p>
+      <a><%= post.city.name %></a>
+    </div>
+    <div class="post_image">
+      <%= link_to image_tag(post.image.variant(resize: '500x500'), class: :post_image), "#" %>
     </div>
     <div class="post_created_at">
-      <%= l post.created_at %>
+      <a><%= l post.created_at %></a>
     </div>
-    <%= link_to image_tag(post.image.variant(resize: '500x500'), class: :post_image), "#" %>
     <div class="post_explain">
-      <p><%= post.explain %></p>
+      <a><%= post.explain %></a>
     </div>
     <div class="post_delete">
       <%= link_to '削除', post_path(post.id), method: :delete %>
