--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -7,7 +7,6 @@
   display: flex;
   height: 80px;
   width: 100vw;
-  /* justify-content: space-around; */
   background-color:coral;
 }
 
@@ -17,6 +16,34 @@
   line-height: 46px;
   padding-right: 20px;
   z-index: 150;
+}
+
+.navi {
+  background: #0bd;
+  position: fixed;
+  overflow: hidden;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  text-align: center;
+  width: 0; 
+  transition: 0.2s;
+  z-index: 100;
+}
+
+.open-menu {
+  width: 50%;   
+}
+nav ul {
+  padding: 50px 20px;
+}
+nav li {
+  list-style: none;
+  text-align: left;
+  padding: 10px 0;
+}
+nav li a {
+  display: block;
 }
 
 
@@ -43,6 +70,9 @@
   height: calc(100vh - 80px);
   overflow: scroll;
 }
+
+
+
 
 /* _postテンプレート */
 .post_info {
