--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -46,6 +46,20 @@ nav li a {
   display: block;
 }
 
+.menu-background {
+  position: fixed;
+  top: 0;
+  right: 0;
+  display: block;
+  width: 0;
+  height: 0;
+  background: black;
+  opacity: 0.8;
+}
+.open {
+  width: 100%;
+  height: 100%;
+}
 
 
 
