ドロワーメニュー１HTML記述

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,6 +11,31 @@
     </div>
 
 
+    <div id="wrapper">
+      <nav class="menu">
+        <ul>
+          <li><a href="#">メニュー1</a></li>
+          <li><a href="#">メニュー2</a></li>
+          <li><a href="#">メニュー3</a></li>
+          <li><a href="#">メニュー4</a></li>
+          <li><a href="#">メニュー5</a></li>
+        </ul>
+      </nav>
+
+      <button type="button" id="nav-btn" class="hamburger">
+        <span class="bdr"></span>
+        <span class="bdr"></span>
+        <span class="bdr"></span>
+      </button>
+
+      <div id="contents">
+        横幅が768pxになるとハンバーガーメニューが表示されます
+      </div>
+
+    </div><!-- wrapper -->
+
+
+    
 
     <%# 検索機能に関する記述 %>
     <%# <%= form_with(url: search_posts_path, local: true, method: :get, class: "search_form") do |form| %>
