--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,25 +10,6 @@
         <%= link_to "新規投稿", new_post_path, method: :get %>
       </div>
     </div>
-    <div id="wrapper">
-      <nav class="menu">
-        <ul>
-          <li><a href="#">メニュー1</a></li>
-          <li><a href="#">メニュー2</a></li>
-          <li><a href="#">メニュー3</a></li>
-          <li><a href="#">メニュー4</a></li>
-          <li><a href="#">メニュー5</a></li>
-        </ul>
-      </nav>
-
-      <button type="button" id="nav-btn" class="hamburger">
-        <span class="bdr"></span>
-        <span class="bdr"></span>
-        <span class="bdr"></span>
-      </button>
-
-    </div><!-- wrapper -->
-
 
 
 
@@ -42,7 +23,30 @@
     <%# /検索機能に関する記述/ %>
   </div>
 
+
+  <nav class="menu">
+    <ul>
+      <li><a href="#">メニュー1</a></li>
+    </ul>
+  </nav>
+  <button type="button" id="nav-btn" class="hamburger">
+  メニュー
+    <span class="bdr"></span>
+    <span class="bdr"></span>
+    <span class="bdr"></span>
+  </button>
+
+
   <div class="main">
     <%= render partial: "post", locals: { post: @posts } %>
   </div>
+
+
+
+
+  <%# <div id="wrapper"> %>
+
+  <%# </div><!-- wrapper --> %>
+
+
 </div>
